--- a/css/my.css
+++ b/css/my.css
@@ -4,6 +4,7 @@ body{
 	background-size: cover;
 	font-family: 'Montserrat','Nunito';
 	display: flex;
+	background-position: center;
 	overflow: hidden;
 }
 
